Map front-end API: fill polygons (-> z-index issue)

--- a/Map/NodeJS/Examples/MapExamples.css
+++ b/Map/NodeJS/Examples/MapExamples.css
@@ -13,3 +13,10 @@ button
 {
    margin-top: 8px;
 }
+
+#elementList
+{
+   height: 600px;
+   width: 200px; 
+   overflow: auto;
+}
